--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,9 +1,9 @@
 name: CD
 
 on:
-  push:
+  pull_request:
     branches:
-      - main
+      - dev
 
 jobs:
   deploy:
@@ -25,10 +25,8 @@ jobs:
               git clone https://github.com/Zahid031/Blog_API.git /home/ubuntu/Blog_API
             fi
             cd /home/ubuntu/Blog_API
-            git pull origin main
+            git fetch origin
+            git reset --hard origin/dev
             sudo docker-compose down
             sudo docker-compose up -d --build
           EOF
-
-
-
