--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -24,7 +24,7 @@ jobs:
             if [ ! -d "/home/ubuntu/CI-CD-test" ]; then
               git clone https://github.com/Zahid031/CI-CD-test.git /home/ubuntu/CI-CD-test
             fi
-            cd /home/ubuntu/Blog_API
+            cd /home/ubuntu/CI-CD-test
             git fetch origin
             git reset --hard origin/dev
             sudo docker-compose down
