--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -27,6 +27,6 @@ jobs:
             cd /home/ubuntu/CI-CD-test
             git fetch origin
             git reset --hard origin/dev
-            sudo docker-compose down
-            sudo docker-compose up -d --build
+            sudo docker compose down
+            sudo docker compose up -d --build
           EOF
