--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,32 +1,43 @@
-name: CD
+name: Deploy PR Preview
 
 on:
   pull_request:
     branches:
       - dev
+    types: [opened, synchronize, reopened, closed]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup SSH Key
+      - name: Setup SSH key
         run: |
           echo "${{ secrets.AWS_EC2_KEY }}" > ec2_key.pem
           chmod 600 ec2_key.pem
 
-      - name: Deploy to AWS EC2
+      - name: Deploy or Cleanup PR
         run: |
-          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ubuntu@${{ secrets.AWS_EC2_IP }} << EOF
-            if [ ! -d "/home/ubuntu/CI-CD-test" ]; then
-              git clone https://github.com/Zahid031/CI-CD-test.git /home/ubuntu/CI-CD-test
+          PR_ID=${{ github.event.pull_request.number }}
+          BRANCH_NAME=${{ github.head_ref }}
+          REPO_URL="https://github.com/${{ github.repository }}.git"
+          REMOTE_DIR="/home/ubuntu/CI-CD-test"
+
+          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ubuntu@${{ secrets.AWS_EC2_IP }} <<EOF
+
+            if [ ! -d "\$REMOTE_DIR" ]; then
+              git clone \$REPO_URL \$REMOTE_DIR
             fi
-            cd /home/ubuntu/CI-CD-test
+
+            cd \$REMOTE_DIR
             git fetch origin
+            git checkout dev
             git reset --hard origin/dev
-            sudo docker compose down
-            sudo docker compose up -d --build
+            chmod +x *.sh
+
+            if [ "${{ github.event.action }}" = "closed" ]; then
+              bash cleanup_pr.sh \$PR_ID
+            else
+              bash deploy_pr.sh \$PR_ID \$BRANCH_NAME \$REPO_URL
+            fi
           EOF
