--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@
 
 services:
   db:
-    image: postgres:latest
+    image: postgres:13
     ports:
-      - "5433:5432"
+      - "${DB_PORT}:5432"
     environment:
-      - POSTGRES_DB=blog_db
-      - POSTGRES_USER=blog_user
-      - POSTGRES_PASSWORD=blog_user
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U blog_user -d blog_db"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -24,12 +24,12 @@ services:
     volumes:
       - .:/code
     ports:
-      - "8001:8000"
+      - "${APP_PORT}:8000"
     depends_on:
       db:
         condition: service_healthy
     environment:
-      - DATABASE_URL=postgres://blog_user:blog_user@db:5432/blog_db
+      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
     command: >
       sh -c "python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
