--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -20,24 +20,24 @@ jobs:
         run: |
           PR_ID=${{ github.event.pull_request.number }}
           BRANCH_NAME=${{ github.head_ref }}
-          REPO_URL="https://github.com/${{ github.repository }}.git"
+          REPO_URL="https://github.com/${{ github.event.pull_request.head.repo.full_name }}.git"
           REMOTE_DIR="/home/ubuntu/CI-CD-test"
 
           ssh -o StrictHostKeyChecking=no -i ec2_key.pem ubuntu@${{ secrets.AWS_EC2_IP }} <<EOF
 
             if [ ! -d "$REMOTE_DIR" ]; then
-              git clone $REPO_URL $REMOTE_DIR
+              git clone \$REPO_URL \$REMOTE_DIR
             fi
 
-            cd $REMOTE_DIR
+            cd \$REMOTE_DIR
             git fetch origin
             git checkout dev
             git reset --hard origin/dev
             chmod +x *.sh 
 
             if [ "${{ github.event.action }}" = "closed" ]; then
-              bash cleanup_pr.sh $PR_ID
+              bash cleanup_pr.sh \$PR_ID
             else
-              bash deploy_pr.sh $PR_ID $BRANCH_NAME $REPO_URL
+              bash deploy_pr.sh \$PR_ID \$BRANCH_NAME \$REPO_URL
             fi
           EOF
